# shaderbar

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json  tray.js
patches/: glium+0.34.0.patch  glium.actual
src/: desktop_file.rs  font.h  font.raw  font.xcf  main.rs  sensors.rs  state.rs  style.css  utils.rs  wallpaper.css
src/config/: defaults.css  defaults.json  mod.rs
src/gl/: fragment.glsl  fragment_140.glsl  fragment_300_es.glsl  mod.rs  render.rs  tools.rs  uniform.rs  vertex.glsl
src/js/: make_font.js
src/sensors/: detect.rs  mod.rs
src/tray/: diff.rs  icon.rs  interface.rs  menu.rs  menu_item.rs  mod.rs  section.rs  submenu.rs  tray_icon.rs  tray_item.rs
src/wallpaper/: mod.rs
