[package]
name = "shaderbar"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-rs = { version = "0.19.4", features = ["png", "freetype-rs"] }
cfg-if = "1.0.0"
chrono = "0.4.38"
color-eyre = "0.6.3"
colored = "2.1.0"
dirs = "5.0.1"
epoxy = "0.1.0"
glib = "0.19.7"
glium = "0.34.0"
gtk4 = "0.8.2"
gtk4-layer-shell = "0.3.0"
image = "0.25.1"
libloading = "0.8.3"
rand = "0.8.5"
regex = "1.10.5"
serde = "1.0.203"
serde_json = "1.0.117"
system-tray = "0.2.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
walkdir = "2.5.0"
whoami = "1.5.1"

[build]
rustflags = ["-C", "target-cpu=native", "-Z", "threads=8"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = "debuginfo"
debug = false
